# PatroclusOS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.in  README.md  boot.S  build.sh  config.sh  configure  ideas.md  roadmap.md  why_I_hate_builds.md
bootloader/: CMakeLists.txt  Makefile.in  asdfg.txt  main.cpp  multiboot-loader.c  multiboot.h  sources.mk  src.mk  stage0.S  stage0.ld  stage1  stage1-linker.ld  stage1.S  stage1.ld  string.c  vga.c
build-scripts/: comment-cleanup.py  create-diskimage.sh  doxygen-cleanup.py  generate-diskimage.sh  injectFAT.py  injectFAT.sh  mountdirs.sh
config/: config.mk  diskimage.sfdisk  grub.cfg  output.mk  toolchain.cmake  toolchain.sh
config/make/: config.mk.in  output.mk.in
docs/: CMakeLists.txt  Doxyfile.in  README.md  basicinfo.md
docs/bootloader/: README.md  bootloader_design.md
include/: sources.cmake
include/bootloader/: commonDefines.h  multiboot-loader.h  vga.h
include/devices/: BIOSVideoIO.hpp  framebuffer_io.hpp
include/earlyLib/: diskRead16.hpp  memory.hpp  memoryDetection16.hpp  realMode.hpp
include/fs/: fat32.hpp  mbr.hpp
include/kernel/: gdt.h  interrupts.hpp  isr.h  kernel.h  kernel.hpp
include/klib/: basic_cpp_io.hpp  basic_io.h  cstdlib.hpp  io.hpp  stdlib.h  string.h  tracemax.hpp
include/klib/hidden/: stdio_format.h
include/sys/: elf.h  multiboot.h
init/: Makefile.in  elfLoader.cpp  elfLoader.hpp  enterKernel.S  init.S  init_common.cpp  init_common.hpp  longMode.S  main.cpp  paging.c  paging.h  sources.mk
kernel/: CMakeLists.txt  Makefile.in  boot.S  crti.S  crtn.S  entry.S  interruptHandler.S  interrupts.cpp  kernel.c  kernel.cpp  kernel.ld  sources.mk  src.mk
lib/: CMakeLists.txt  Makefile32.in  Makefile64.in  sources32.mk  sources64.mk
lib/basic_io/: basic_io.c  vga.c
lib/c/hidden/: stdio_format.c
lib/c/stdlib/: xtoa.c
lib/c/string/: string.cpp
lib/cpp/basic_cpp_io/: terminal.cpp
lib/devices/: framebuffer_io.cpp
lib/earlyLib/: asmCall_int12.S  asmCall_int13.S  asmCall_int15.S  diskRead16.cpp  memory.cpp  memoryDetection16.cpp  realModeCall.S
lib/fs/: fat32.cpp
lib/io/: BIOSVideoIO.cpp  basic_io.cpp  framebuffer_io.cpp  io.cpp
lib/stdLibC/: abort.c  cstdlib.cpp  string.c
lib/stdLibc/: stdlib.cpp
tools/build-scripts/: gen-doxyfile.sh  generate-diskimage.sh  mountdirs.sh  qemu-grub-debug.sh  setup-diskimage.sh
